--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ httpx==0.27.0
 idna==3.7
 importlib_metadata==8.2.0
 importlib_resources==6.4.0
+iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.12.3
 ipywidgets==8.1.3
@@ -78,6 +79,7 @@ pickleshare==0.7.5
 pillow==10.4.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.2.2
+pluggy==1.5.0
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
@@ -88,6 +90,7 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 pyparsing==3.1.2
+pytest==8.3.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
